[gd_scene load_steps=10 format=3 uid="uid://dy7tt27iwtpii"]

[ext_resource type="PackedScene" path="res://Objects/PipeSpawner.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bit42bltxiu1r" path="res://HUD/HUD.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://7bnyqv56h56n" path="res://Objects/Background.png" id="3_ker4i"]
[ext_resource type="Script" path="res://Main.gd" id="4"]
[ext_resource type="Script" path="res://Objects/CloudSpawner.gd" id="4_5bev1"]
[ext_resource type="PackedScene" uid="uid://7ig0bxdqxpam" path="res://Objects/Cloud.tscn" id="5_6wxu6"]
[ext_resource type="Script" path="res://Trainers/Trainer.gd" id="8_knwro"]
[ext_resource type="Texture2D" uid="uid://biwwbhp88wgul" path="res://icon.png" id="9_bkuhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yswcy"]
size = Vector2(1173, 14)

[node name="Main" type="Node"]
script = ExtResource("4")

[node name="MapBoundaries" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2(576.5, -3)
shape = SubResource("RectangleShape2D_yswcy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MapBoundaries"]
position = Vector2(577, 652)
shape = SubResource("RectangleShape2D_yswcy")

[node name="HUD" parent="." instance=ExtResource("3")]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_ker4i")

[node name="CloudSpawner" type="Node2D" parent="."]
position = Vector2(1021, 311)
script = ExtResource("4_5bev1")
cloud = ExtResource("5_6wxu6")
cloudSpeed = 100

[node name="Timer" type="Timer" parent="CloudSpawner"]
wait_time = 5.0
autostart = true

[node name="PipeSpawner" parent="." instance=ExtResource("1")]
pipeSpeed = 600
pipeInterval = 1

[node name="Trainer" type="Node2D" parent="."]
position = Vector2(100, 276)
script = ExtResource("8_knwro")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(60, 144)
texture = ExtResource("9_bkuhi")
centered = false
offset = Vector2(-64, 0)

[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="generation_ended" from="Trainer" to="." method="_on_trainer_generation_ended" flags=3]
[connection signal="next_generation_ready" from="Trainer" to="." method="_on_trainer_next_generation_ready" flags=3]
